<resources>
    <string name="app_name">MobileAuthorize</string>
    <string name="trade_by_bata">Trade by <font color='#4E55D7'>bata</font></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome back</string>
    <string name="first_name">First Name</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign in</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="location">Location</string>
    <string name="latest">Latest</string>
    <string name="view_all">View all</string>
    <string name="flash_sale">Flash sale</string>
    <string name="profile">Profile</string>
    <string name="change_photo">Change photo</string>
    <string name="satria_adhi_pradana">Satria Adhi Pradana</string>
    <string name="upload_item">Upload item</string>
    <string name="phones">Phones</string>
    <string name="balance">Balance</string>
    <string name="help">Help</string>
    <string name="trade_store">Trade store</string>
</resources>