<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:background="@color/background_color">

    <TextView
        android:id="@+id/signInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="24sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/firstNameField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstNameField"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:ellipsize="start"
        android:textSize="13sp"
        android:gravity="center"
        android:fontFamily="@font/montserrat"
        android:background="@drawable/field_background"
        android:hint="@string/first_name"
        android:layout_marginVertical="30dp"
        app:layout_constraintBottom_toTopOf="@id/lastNameField"
        app:layout_constraintEnd_toEndOf="@id/signInButton"
        app:layout_constraintStart_toStartOf="@id/signInButton" />

    <EditText
        android:id="@+id/lastNameField"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:ellipsize="start"
        android:textSize="13sp"
        android:gravity="center"
        android:fontFamily="@font/montserrat"
        android:layout_marginVertical="30dp"
        android:background="@drawable/field_background"
        android:hint="@string/last_name"
        app:layout_constraintBottom_toTopOf="@id/emailField"
        app:layout_constraintEnd_toEndOf="@id/signInButton"
        app:layout_constraintStart_toStartOf="@id/signInButton"/>

    <EditText
        android:id="@+id/emailField"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:ellipsize="start"
        android:textSize="13sp"
        android:gravity="center"
        android:fontFamily="@font/montserrat"
        android:layout_marginVertical="30dp"
        android:background="@drawable/field_background"
        android:hint="@string/email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/signInButton"
        app:layout_constraintStart_toStartOf="@id/signInButton"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInButton"
        android:layout_width="280dp"
        android:layout_height="46dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginVertical="30dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/sign_in"
        android:background="@drawable/button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailField" />

    <TextView
        android:id="@+id/alreadyHaveAnAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/already_have_an_account"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/signInButton"
        app:layout_constraintTop_toBottomOf="@id/signInButton" />

    <TextView
        android:id="@+id/logInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:fontFamily="@font/montserrat"
        android:layout_marginStart="5dp"
        android:text="@string/log_in"
        android:textColor="@color/base_blue"
        app:layout_constraintStart_toEndOf="@id/alreadyHaveAnAccountText"
        app:layout_constraintTop_toBottomOf="@id/signInButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/googleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        app:backgroundTint="@color/background_color"
        android:shadowColor="@null"
        android:stateListAnimator="@null"
        android:textSize="14sp"
        app:iconGravity="start"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/sign_in_with_google"
        app:icon="@drawable/ic_google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logInText"
        app:layout_constraintBottom_toTopOf="@id/appleButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/appleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        app:backgroundTint="@color/background_color"
        android:shadowColor="@null"
        android:textSize="14sp"
        android:layout_marginBottom="100dp"
        android:stateListAnimator="@null"
        app:iconGravity="start"
        android:fontFamily="@font/montserrat"
        android:text="@string/sign_in_with_apple"
        app:icon="@drawable/ic_apple"
        app:layout_constraintStart_toStartOf="@id/googleButton"
        app:layout_constraintTop_toBottomOf="@id/googleButton"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>