<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity"
    android:background="@color/background_color">

    <TextView
        android:id="@+id/welcomeBackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/welcome_back"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/firstNameField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstNameField"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:ellipsize="start"
        android:textSize="13sp"
        android:gravity="center"
        android:fontFamily="@font/montserrat"
        android:background="@drawable/field_background"
        android:hint="@string/first_name"
        android:layout_marginVertical="30dp"
        app:layout_constraintBottom_toTopOf="@id/passwordField"
        app:layout_constraintEnd_toEndOf="@id/logInButton"
        app:layout_constraintStart_toStartOf="@id/logInButton" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:ellipsize="start"
        android:textSize="13sp"
        android:gravity="center"
        android:fontFamily="@font/montserrat"
        android:layout_marginVertical="30dp"
        android:background="@drawable/field_background"
        android:hint="@string/password"
        app:layout_constraintBottom_toTopOf="@id/center"
        app:layout_constraintEnd_toEndOf="@id/logInButton"
        app:layout_constraintStart_toStartOf="@id/logInButton"/>

    <EditText
        android:id="@+id/center"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:visibility="gone"
        android:ellipsize="start"
        android:textSize="13sp"
        android:gravity="center"
        android:layout_marginVertical="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logInButton"
        android:layout_width="280dp"
        android:layout_height="46dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat"
        android:layout_marginVertical="30dp"
        android:text="@string/log_in"
        android:background="@drawable/button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/center" />

</androidx.constraintlayout.widget.ConstraintLayout>