<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPageFragment"
    android:background="@color/background_color">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ScrollViewCount">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iconNavigate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_nav"
                android:layout_marginStart="11dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/my_place_text"
                app:layout_constraintBottom_toBottomOf="@id/my_place_text"/>

            <TextView
                android:id="@+id/my_place_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/trade_by_bata"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/frame"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:elevation="5dp"
                app:cardCornerRadius="150dp"
                android:layout_centerHorizontal="true"
                android:innerRadius="0dp"
                android:shape="ring"
                android:thicknessRatio="1.9"
                android:layout_marginEnd="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/iconNavigate"
                app:layout_constraintBottom_toBottomOf="@id/iconNavigate">

                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_height="30dp"
                    android:layout_width="match_parent"
                    android:src="@drawable/profile_pic"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true">
                </ImageView>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/locationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                app:backgroundTint="@color/background_color"
                android:shadowColor="@null"
                android:stateListAnimator="@null"
                android:paddingBottom="20dp"
                android:textColor="@color/text_grey"
                android:fontFamily="@font/poppins"
                android:textSize="10sp"
                android:text="@string/location"
                android:drawableEnd="@drawable/ic_drop_down_list"
                app:layout_constraintStart_toStartOf="@id/frame"
                app:layout_constraintEnd_toEndOf="@id/frame"
                app:layout_constraintTop_toBottomOf="@id/frame" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/category_recyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                tools:listitem="@layout/item_category"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/search_view"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="262dp"
                android:layout_height="24dp"
                app:queryHint="What are you looking for ?"
                android:layoutDirection="rtl"
                android:layout_marginTop="-15dp"
                android:backgroundTint="@color/search_view_background"
                android:background="@drawable/button_background"
                android:layout_marginEnd="20dp"
                app:searchIcon="@drawable/ic_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/locationButton"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/latest_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/poppins"
                android:text="@string/latest"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/category_recyclerView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/latest_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                tools:listitem="@layout/item_latest"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/latest_text"/>

            <TextView
                android:id="@+id/view_all_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:text="@string/view_all"
                android:fontFamily="@font/poppins"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/latest_text"
                app:layout_constraintBottom_toBottomOf="@id/latest_text"/>

            <TextView
                android:id="@+id/flash_sale_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/poppins"
                android:text="@string/flash_sale"
                app:layout_constraintTop_toBottomOf="@id/latest_recyclerView"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/see_more_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:text="@string/view_all"
                android:fontFamily="@font/poppins"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/flash_sale_text"
                app:layout_constraintBottom_toBottomOf="@id/flash_sale_text"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/flash_sale_recyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:foregroundGravity="center"
                android:layout_marginTop="5dp"
                tools:listitem="@layout/item_flash_sale"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/flash_sale_text"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>