<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment"
    android:background="@color/background_color">


    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/profileText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/profile"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/frame"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:elevation="5dp"
        app:cardCornerRadius="40dp"
        android:layout_centerHorizontal="true"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/profileText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_height="80dp"
            android:layout_width="match_parent"
            android:src="@drawable/profile_pic"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">
        </ImageView>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/changePhotoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_photo"
        android:fontFamily="@font/montserrat"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/satria_adhi_pradana"
        android:fontFamily="@font/montserrat_medium"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/changePhotoText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/uploadButton"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:textAllCaps="false"
        android:background="@drawable/button_background"
        app:backgroundTint="@color/base_blue"
        android:shadowColor="@null"
        android:stateListAnimator="@null"
        android:textSize="14sp"
        app:iconGravity="textStart"
        app:iconPadding="30dp"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:paddingEnd="30dp"
        android:text="@string/upload_item"
        android:fontFamily="@font/montserrat"
        app:icon="@drawable/ic_upload"
        app:iconTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/profileName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <include
        android:id="@+id/tradeStore"
        android:layout_width="0dp"
        android:layout_height="50dp"
        layout="@layout/profile_func_button"
        android:layout_marginTop="15dp"
        android:layout_marginStart="-10dp"
        android:layout_marginEnd="-10dp"
        app:layout_constraintTop_toBottomOf="@id/uploadButton"
        app:layout_constraintStart_toStartOf="@id/uploadButton"
        app:layout_constraintEnd_toEndOf="@id/uploadButton"/>

    <include
        android:id="@+id/paymentMethod"
        android:layout_width="0dp"
        android:layout_height="50dp"
        layout="@layout/profile_func_button"
        android:layout_marginTop="10dp"
        android:layout_marginStart="-10dp"
        android:layout_marginEnd="-10dp"
        app:layout_constraintTop_toBottomOf="@id/tradeStore"
        app:layout_constraintStart_toStartOf="@id/uploadButton"
        app:layout_constraintEnd_toEndOf="@id/uploadButton"/>

    <include
        android:id="@+id/balance"
        android:layout_width="0dp"
        android:layout_height="50dp"
        layout="@layout/profile_balance"
        android:layout_marginTop="10dp"
        android:layout_marginStart="-10dp"
        android:layout_marginEnd="-10dp"
        app:layout_constraintTop_toBottomOf="@id/paymentMethod"
        app:layout_constraintStart_toStartOf="@id/uploadButton"
        app:layout_constraintEnd_toEndOf="@id/uploadButton"/>

    <include
        android:id="@+id/tradeHistory"
        android:layout_width="0dp"
        android:layout_height="50dp"
        layout="@layout/profile_func_button"
        android:layout_marginTop="10dp"
        android:layout_marginStart="-10dp"
        android:layout_marginEnd="-10dp"
        app:layout_constraintTop_toBottomOf="@id/balance"
        app:layout_constraintStart_toStartOf="@id/uploadButton"
        app:layout_constraintEnd_toEndOf="@id/uploadButton"/>

    <include
        android:id="@+id/restorePurchase"
        android:layout_width="0dp"
        android:layout_height="50dp"
        layout="@layout/profile_func_button"
        android:layout_marginTop="10dp"
        android:layout_marginStart="-10dp"
        android:layout_marginEnd="-10dp"
        app:layout_constraintTop_toBottomOf="@id/tradeHistory"
        app:layout_constraintStart_toStartOf="@id/uploadButton"
        app:layout_constraintEnd_toEndOf="@id/uploadButton"/>

    <include
        android:id="@+id/help"
        android:layout_width="0dp"
        android:layout_height="50dp"
        layout="@layout/profile_button"
        android:layout_marginTop="10dp"
        android:layout_marginStart="-10dp"
        android:layout_marginEnd="-10dp"
        app:layout_constraintTop_toBottomOf="@id/restorePurchase"
        app:layout_constraintStart_toStartOf="@id/uploadButton"
        app:layout_constraintEnd_toEndOf="@id/uploadButton"/>

    <include
        android:id="@+id/logOut"
        android:layout_width="0dp"
        android:layout_height="50dp"
        layout="@layout/profile_button"
        android:layout_marginTop="10dp"
        android:layout_marginStart="-10dp"
        android:layout_marginEnd="-10dp"
        app:layout_constraintTop_toBottomOf="@id/help"
        app:layout_constraintStart_toStartOf="@id/uploadButton"
        app:layout_constraintEnd_toEndOf="@id/uploadButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>